--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/sala_facil
+# Configuração de conexão com o banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/sala_facil?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=sua_senha_aqui  # Não deixe vazio, preencha com a senha certa!
+
+# Configurações JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update  # Em produção, substitua por 'validate' ou 'none'
 spring.jpa.show-sql=true
+
+# Dialeto do Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Nome da aplicação
 spring.application.name=SalaFacilSpace
