--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-# Configuração de conexão com o banco de dados MySQL
+# Configuraï¿½ï¿½o de conexï¿½o com o banco de dados MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/sala_facil?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=sua_senha_aqui  # Não deixe vazio, preencha com a senha certa!
+spring.datasource.password=sua_senha_aqui  # Nï¿½o deixe vazio, preencha com a senha certa!
 
-# Configurações JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update  # Em produção, substitua por 'validate' ou 'none'
+# Configuraï¿½ï¿½es JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update  # Em produï¿½ï¿½o, substitua por 'validate' ou 'none'
 spring.jpa.show-sql=true
 
 # Dialeto do Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Nome da aplicação
+# Nome da aplicaÃ§Ã£o
 spring.application.name=SalaFacilSpace
