--- a/pom.xml
+++ b/pom.xml
@@ -71,11 +71,13 @@
         </dependency>
 
         <!-- Swagger 3 -->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>3.0.0</version>
-        </dependency>
+     <dependency>
+  <groupId>org.springdoc</groupId>
+  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+  <version>2.5.0</version>
+</dependency>
+
+
 
         <!-- JWT -->
         <dependency>
