--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Conectar com o banco de dados 
-spring.datasource.url=jdbc:mysql://localhost:3306/sala_facilspace?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/sala_facil?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Legiondbd123#
 
