--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Conectar com o banco de dados 
-spring.datasource.url=jdbc:mysql://localhost:3306/sala_facilspace?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/sala_facilspace2?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Legiondbd123#
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.show-sql=true
